--- a/Vezbe-13/01-RNN uvod.ipynb
+++ b/Vezbe-13/01-RNN uvod.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "U ovoj svesci sumirani su osnovni koncepti vezani za rekturentne neuronske mreže i podrška Keras biblioteke u radu sa njima."
+    "U ovoj svesci sumirani su osnovni koncepti vezani za rekturentne neuronske mreže i podrška torch biblioteke u radu sa njima."
    ]
   },
   {
@@ -31,29 +31,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torch.nn as nn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import numpy as np\n",
-    "np.random.seed(7)"
+    "\n",
+    "SEED = 7\n",
+    "# za determinističko izvršavanje sveske:\n",
+    "np.random.seed(SEED)\n",
+    "torch.manual_seed(SEED)\n",
+    "if torch.cuda.is_available():\n",
+    "    torch.cuda.manual_seed_all(SEED)"
    ]
   },
   {
@@ -81,16 +71,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dužinu sekvence ćemo zadati promenljivom `timestamps`."
+    "Dužinu sekvence ćemo zadati promenljivom `timesteps`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "timestamps = 100"
+    "timesteps = 100"
    ]
   },
   {
@@ -102,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,17 +103,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Matrica svih ulaza će biti dimenzija `timestamps` x `input_size`. Inicijalizovaćemo je nasumičnim vrednostima.\n",
+    "Matrica svih ulaza će biti dimenzija `timesteps` x `input_size`. Inicijalizovaćemo je nasumičnim vrednostima.\n",
     "<img src='assets/sequence_data.png'>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs = np.random.random((timestamps, input_size))"
+    "inputs = np.random.random((timesteps, input_size))"
    ]
   },
   {
@@ -135,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,19 +134,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "output_t_prev = np.zeros(output_size)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -167,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +214,7 @@
        "100"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +234,7 @@
        "(100, 64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +254,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: Rad sa rekurentnim neuronskim mrežama ovog tipa je moguć kroz `RNN` sloj. Ulaz u mrežu može biti oblika `(batch_size, timestamps, input_size)` ili `(timestamps, batch?size, input_size)` gde `batch_size` predstavlja veličinu paketića tj. broj sekvenci koje mreža očekuje na ulazu, a izlaz može da bude ili u formi `(batch_size, timestamps, output_size)` ili u formi `(batch_size, output_size)`. Ovo ponašanje se kontroliše kroz `return_sequences` argument sloja i u prvom slučaju naglašava da treba sačuvati i vratiti izlaz za svaki ulaz svake sekvence, dok u drugom slučaju naglašava da treba vratiti izlaz samo poslednjeg ulaza sekvence."
+    "Rad sa različitim neuronskim mrežama u biblioteci torch omogućen je kroz klase iz modula `torch.nn`. Klasa koja odgovara gore opisanoj neuronskoj mreži je `nn.RNN`. U zavisnosti od parametra konstruktora `batch_first` neuronska mreža će očekivati ulaze oblika `(batch_size, timesteps, input_size)` odnosno `(timesteps, batch_size, input_size)`, pri čemu je `batch_size` veličina paketića koja se koristi prilikom treninga."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Izlaze jednog sloja rekurentne neuronske mreže možemo proslediti drugoj rekurentnoj neuronskoj mreži kao na slici ispod. Broj rekurentnih neuronskih mreža kroz koji ulazi prolaze se kontroliše parametrom `num_layers` u konstruktoru.\n",
+    "\n",
+    "<img src='assets/stacked_RNN.png'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Klasa `RNN` prilikom prolaza vraća dva tenzora, `outputs` i `h_n`. Izlaz `outputs` će biti obilika `(batch_size, timesteps, output_size)`, odnosno `(batch_size, timesteps, output_size)` u zavisnosti od parametra `batch_first` i predstavlja izlaze poslednje rekurentne neuronske mreže. Izlaz `h_n` je tenzor dimenzije `(num_layers, output_size)` i predstavlja izlaze poslednjeg skrivenog sloja svake neuronske mreže.   "
    ]
   },
   {
@@ -312,17 +311,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch.nn as nn\n",
     "model = nn.RNN(input_size, output_size, num_layers=1, batch_first=True)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
        "RNN(32, 64, batch_first=True)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,8 +341,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zbog implementacijonih detalja formula koju koriste za računanje skrivenog stanja glasi \n",
+    "\n",
+    "$h_t = x_t V + b_v + h_{t-1} U + b_u$ \n",
+    "\n",
+    "gde su matrice $V$ i $U$ dimenzija (input_size, output_size) i (output_size, output_size), a vektori $b_v$ i $b_u$ su dimenzije (output_size,). Iz tog razloga broj parametara napravljenog modela je $32 \\cdot 64 + 64 + 64 \\cdot 64 + 64 = 6272$ "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -359,57 +370,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output, h_last = model(torch.tensor(inputs, dtype=torch.float32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "simple_rnn_1 (SimpleRNN)     (None, 64)                6208      \n",
-      "=================================================================\n",
-      "Total params: 6,208\n",
-      "Trainable params: 6,208\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
+      "output.shape=torch.Size([8, 100, 64])\n",
+      "h_last.shape=torch.Size([1, 8, 64])\n"
      ]
     }
    ],
    "source": [
-    "model.summary()"
+    "print(f\"{output.shape=}\")\n",
+    "print(f\"{h_last.shape=}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Možemo primetiti da je broj parametara za oba pokretanja isti, a da se razlikuju samo veličine izlaza: u prvom slučaju to je `(None, 100, 64) ` a u drugom `(None, 64)`. Vrednost `None` će prilikom treniranja mreže biti zamenjena veličinom paketića za treniranje."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -455,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +576,7 @@
        "100"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +596,7 @@
        "(100, 64)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,6 +662,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "<img src='assets/LSTM_math.png'>"
    ]
   },
@@ -696,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,30 +701,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "lstm (LSTM)                  (None, 64)                24832     \n",
-      "=================================================================\n",
-      "Total params: 24,832\n",
-      "Trainable params: 24,832\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
+      "25088\n"
      ]
     }
    ],
    "source": [
-    "model = Sequential()\n",
-    "model.add(nn.LSTM(units=output_size, input_shape=(timestamps, input_size)))\n",
-    "model.summary()"
+    "model = nn.LSTM(input_size=input_size, hidden_size=output_size)\n",
+    "print(sum(p.numel() for p in model.parameters() if p.requires_grad))"
    ]
   },
   {
@@ -757,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +751,7 @@
        "24832"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,11 +1021,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.layers import GRU"
+    "from torch.nn import GRU"
    ]
   },
   {
@@ -1129,7 +1105,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1147,5 +1123,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
